// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`F.fromArray is activated asynchronously 1`] = `
Array [
  Sync {},
  Object {
    "s": "b",
    "x": Next {
      "value": "lol",
    },
  },
  Object {
    "s": "a",
    "x": Next {
      "value": "lol",
    },
  },
  Object {
    "s": "b",
    "x": Next {
      "value": "bal",
    },
  },
  Object {
    "s": "a",
    "x": Next {
      "value": "bal",
    },
  },
  Object {
    "s": "b",
    "x": End {},
  },
  Object {
    "s": "a",
    "x": End {},
  },
]
`;

exports[`F.fromArray sends its value only one time 1`] = `
Array [
  Object {
    "s": "a",
    "x": Next {
      "value": "lol",
    },
  },
  Object {
    "s": "a",
    "x": Next {
      "value": "bal",
    },
  },
  Object {
    "s": "a",
    "x": End {},
  },
  Object {
    "s": "b",
    "x": End {},
  },
]
`;

exports[`F.fromArray sends single event and ends 1`] = `
Array [
  Next {
    "value": "lol",
  },
  Next {
    "value": "bal",
  },
  End {},
]
`;

exports[`F.fromArray supports event wrappers such as Next and Error 1`] = `
Array [
  Next {
    "value": "lol",
  },
  Error {
    "error": "fuk",
  },
  Next {
    "value": "bal",
  },
  End {},
]
`;
